--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kahootclone",
   "version": "1.0.0",
   "description": "A kahoot website clone",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,12 +12,10 @@
   "dependencies": {
     "eiows": "^7.0.3",
     "express": "^4.19.2",
-    "heroku": "^8.11.5",
     "moment": "^2.30.1",
-    "mongodb": "3.7",
-    "mongoose": "^5.13.22",
+    "mongodb": "^3.7",
+    "mongoose": "^7.0.0",
     "open": "^10.1.0",
-    "server": "^1.0.39",
     "socket.io": "^2.5.0"
   },
   "devDependencies": {
